# robot_tutorials

./: README.md
ros1/actions/: package.xml
ros1/gazebo/: CMakeLists.txt  README_build_ros1.md  package.xml
ros1/gazebo/launch/: kitch.launch  move.launch  robot.launch  simulation.launch
ros1/gazebo/msg/: ObjectInfo.msg
ros1/gazebo/scripts/: 1.py  avoid_move.py  avoid_object copy 2.py  avoid_object copy 3.py  avoid_object copy 4.py  avoid_object copy.py  avoid_object.py  avoid_obstacle.py  bowl.py  move_box.py  move_viewpoints.py  object.py  target_reach.py
ros1/gazebo/urdf/: foxglove_box.urdf  robot.xacro  table.urdf
