<?xml version="1.0"?>
<package format="2">
  <name>your_package_name</name>
  <version>0.0.0</version>
  <description>The your_package_name package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
